# zaboard

./: .gitignore  CMakeLists.txt  NoteMap.csv  README.md
bui/: zaboard
src/: .clang-format  conductor.cpp  conductor.h  csv.hpp  instrument.cpp  instrument.h  notemap.cpp  notemap.h  zaboard.cpp  zbtrack.cpp  zbtrack.h  zkeyboard.h
src/preprocessor/: preprocessor.cpp
src/unix/: zkeyboard.cpp
src/windows/: zkeyboard.cpp
